galileo 0.4 (????-??-??)
------------------------

Plan for this release:
- File based configuration
- Enhanced stability
- More configuration options
- Some breackthrough in the analyse of the dumps (even for Flex/Force ?)

Main changes since 0.3:
- switch to the HTTPS protocol.


galileo 0.3 (2014-01-27)
------------------------

This is the third version of galileo, a free utility to synchronise fitbit
bluetooth trackers with the fitbit service.

This release greatly enhance the user friendliness by adding support for
command line switches to control the various aspects of the synchronisation.
As well as improves the code quality.

New contributors to this release: Stuart Hickinbottom.

Main changes since 0.2:
- Improve error reporting when insuficient permissions are set on the usb
  device (PR #3, issue#10)
- Add --no-dump to prevent writing a backup of the dump to disc (issue#19).
- Only sync the trackers that have not been sync'd for some time. Use --force
  to always sync all the discovered trackers (PR #2, issue#13).
- Warn when the signal from the tracker is too weak (issue#12).
- Add command-line switches to control verbosity (PR #1, issue#9).
- Register package to PyPi, and allow installation via pip.
- Improve detection of the end of the dump (issue#2).
- Unify the timeout values.
- Code cleanup.


galileo 0.2 (2013-12-30)
------------------------

This was the second version of galileo, a free utility to synchronise fitbit
trackers with the fitbit server.

This version fixes an issue when the dump from the tracker was not being
accepted by the server.

Main changes since 0.1:
- Unescape some bits before transmitting to the server, this solves an issue
  with the fitbit data not being accepted by the server (issue#1).
- Add a udev rules files to allow the utility to run as a non-privileged user.
- Add a diff.py script to analyse difference in dumps.
- Also dump the response from the server in the dump file.
- Code cleanup


galileo 0.1 (2013-11-24)